--- a/src/components/totalMoney/style.css
+++ b/src/components/totalMoney/style.css
@@ -1,7 +1,7 @@
 .saldo {
   width: 363px;
   height: 96px;
-  margin-top: 500px;
+  margin-top: 450px;
   margin-left: 107px;
   border: 1px solid #e9ecef;
   border-radius: 4px;
@@ -14,4 +14,12 @@
 #conteud {
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 900px) {
+  .saldo {
+    position: fixed;
+    top: 1000px;
+    left: 0;
+    margin: 0;
+  }
 }
