--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -15,3 +15,16 @@ ul {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 900px) {
+  ul {
+    left: 0px;
+    top: 650px;
+    width: 80%;
+    height: 300px;
+    overflow-y: scroll;
+  }
+  li {
+    width: 300px;
+    min-height: 87px;
+  }
+}
