--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -9,19 +9,15 @@ li {
   display: flex;
 }
 ul {
-  position: absolute;
-  right: 170px;
-  top: 200px;
   display: flex;
   flex-direction: column;
 }
 @media (max-width: 900px) {
   ul {
-    left: 0px;
-    top: 650px;
-    width: 80%;
-    height: 300px;
+    width: 90%;
+    height: 110vw;
     overflow-y: scroll;
+    padding: 10px;
   }
   li {
     width: 300px;
