--- a/src/components/totalMoney/style.css
+++ b/src/components/totalMoney/style.css
@@ -17,7 +17,7 @@
 }
 @media (max-width: 900px) {
   .saldo {
-    position: fixed;
+    position: absolute;
     top: 1000px;
     left: 0;
     margin: 0;
