--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,8 +1,5 @@
 .price {
-  position: relative;
-  left: 400px;
   width: fit-content;
-  bottom: 80px;
 }
 .status {
   width: 4px;
@@ -10,28 +7,24 @@
   margin: none;
 }
 .content {
-  margin-left: 50px;
-  position: relative;
-  top: -100px;
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: flex-start;
 }
 .all {
-  width: 560px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 .trash {
-  position: relative;
-  left: 480px;
-  width: fit-content;
-  bottom: 115px;
+  padding: 15px;
 }
 .trash:hover {
   filter: invert(1);
 }
-@media (max-width: 900px) {
-  .price {
-    left: 180px;
-  }
-  .trash {
-    left: 200px;
-    bottom: 70px;
-  }
+#text {
+  display: flex;
+  flex-direction: column;
 }
