--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -1,8 +1,5 @@
 li {
   list-style: none;
-  float: right;
-  width: 560px;
-  height: 87px;
   color: #212529;
   background-color: #f8f9fa;
   margin-bottom: 40px;
@@ -11,7 +8,9 @@ li {
 ul {
   display: flex;
   flex-direction: column;
-  
+  height: 110vw;
+  overflow-y: scroll;
+  padding: 10px;
 }
 @media (max-width: 900px) {
   ul {
